test/errors/indexed_offsets_error/zs/valueof_in_array_expression_error.zs
package valueof_in_array_expression_error;

enum uint8 Enum
{
    ONE,
    TWO
};

struct ValueOfInArrayExpressionError
{
    uint32 offsets[];
offsets[valueof(Enum.TWO)]:
    string fields[];
};
